@@ -1,11 +1,22 @@
+Acknowledgement
 Contribution Tool
 Document Module
+Event Module
+Fax Message
 Knowledge Pad Module
+Letter
+Mail Message
+Note
 Person
 Person Module
+Phone Call
+Short Message
+Site Message
 Spreadsheet
 Text
+Visit
 Web Illustration
+Web Message
 Web Page
 Web Page Module
 Web Table
