@@ -9,3 +9,14 @@ Web Illustration
 Web Page
 Web Page Module
 Web Table
+Event Module
+Acknowledgement
+Fax Message
+Letter
+Mail Message
+Note
+Phone Call
+Short Message
+Site Message
+Visit
+Web Message
