@@ -1,4 +1,5 @@
 2011-03-01 gabriel
+* Add roles to allow erp5 user manage events in Event Module
 * Initial commit to testUNGSecurity
 
 2010-12-27 gabriel
